# tiflash

./: .gitignore  .gitmodules  AGENTS.override.md  CMakeLists.txt  CMakePresets.json  NOTICE
.codex/progress/: daemon.md
cmake/: find_arrow.cmake
contrib/: CMakeLists.txt
contrib/arrow-cmake/: CMakeLists.txt
dbms/: CMakeLists.txt
dbms/src/Common/: FailPoint.cpp
dbms/src/DataStreams/: CreatingSetsBlockInputStream.cpp  CreatingSetsBlockInputStream.h  HashJoinProbeBlockInputStream.cpp  HashJoinProbeBlockInputStream.h
dbms/src/Debug/: MockStorage.cpp  MockStorage.h  dbgFuncCoprocessor.cpp  dbgFuncMockRaftSnapshot.cpp  dbgTools.cpp
dbms/src/Debug/MockExecutor/: AggregationBinder.cpp
dbms/src/Flash/: BatchCoprocessorHandler.cpp  CMakeLists.txt  CoprocessorHandler.cpp  executeQuery.cpp
dbms/src/Flash/Coprocessor/: DAGContext.cpp  DAGContext.h  DAGQueryBlockInterpreter.cpp  DAGStorageInterpreter.cpp  StreamingDAGResponseWriter.cpp  TablesRegionsInfo.cpp  TablesRegionsInfo.h  TiDBTableScan.cpp  TiDBTableScan.h
dbms/src/Flash/Mpp/: MPPHandler.cpp  MPPTask.cpp
dbms/src/Flash/Planner/Plans/: PhysicalAggregation.cpp  PhysicalFilter.cpp  PhysicalFilter.h  PhysicalJoin.cpp  PhysicalJoin.h  PhysicalProjection.cpp  PhysicalProjection.h
dbms/src/Flash/Planner/plans/: PhysicalJoin.cpp
dbms/src/Flash/TiForth/: ArrowBlockConversion.cpp  ArrowBlockConversion.h  ArrowTypeMapping.cpp  ArrowTypeMapping.h  BlockPipelineRunner.cpp  BlockPipelineRunner.h  TaskGroupRunner.h  TiFlashMemoryPool.cpp  TiFlashMemoryPool.h  TiForthAggBlockInputStream.cpp  TiForthAggBlockInputStream.h  TiForthHashJoinBlockInputStream.cpp  TiForthHashJoinBlockInputStream.h  TiForthPipelineBlockInputStream.cpp  TiForthPipelineBlockInputStream.h  TiForthQueryExecutor.cpp  TiForthQueryExecutor.h  TipbExprToTiForthExpr.cpp  TipbExprToTiForthExpr.h
dbms/src/Flash/tests/: bench_tiforth_arrow_compute_agg.cpp  bench_tiforth_arrow_hash_agg_small_string.cpp  bench_tiforth_hash_agg_small_string.cpp  gtest_aggregation_executor.cpp  gtest_auto_spill_aggregation.cpp  gtest_auto_spill_join.cpp  gtest_compute_server.cpp  gtest_execution_summary.cpp  gtest_executors_with_dm.cpp  gtest_join_executor.cpp  gtest_projection_executor.cpp  gtest_runtime_filter_executor.cpp  gtest_spill_aggregation.cpp  gtest_spill_join.cpp  gtest_tiforth_arithmetic_parity.cpp  gtest_tiforth_arrow_hash_agg_parity.cpp  gtest_tiforth_block_roundtrip.cpp  gtest_tiforth_block_runner.cpp  gtest_tiforth_blocked_states.cpp  gtest_tiforth_comparison_logical_parity.cpp  gtest_tiforth_dag_translate_parity.cpp  gtest_tiforth_filter_agg_parity.cpp  gtest_tiforth_hash_agg_parity.cpp  gtest_tiforth_integration.cpp  gtest_tiforth_memory_pool.cpp  gtest_tiforth_pipeline_translate.cpp  gtest_tiforth_query_executor_passthrough.cpp  gtest_tiforth_streaming.cpp  gtest_tiforth_type_mapping.cpp
dbms/src/Interpreters/: Context.cpp  Context.h  ExpressionAnalyzer.cpp  InterpreterSelectWithUnionQuery.cpp  InterpreterSelectWithUnionQuery.h  Settings.h
dbms/src/Server/: CMakeLists.txt  RaftConfigParser.cpp  RaftConfigParser.h  Server.cpp
dbms/src/Storages/: StorageDeltaMerge.cpp  StorageDeltaMergeHelpers.h
dbms/src/Storages/DeltaMerge/: RowKeyRange.h
dbms/src/Storages/Transaction/: ApplySnapshot.cpp  KVStore.cpp  PartitionStreams.cpp  Region.cpp  Region.h  RegionRangeKeys.h  RegionState.cpp  RegionState.h  RegionTable.cpp  TiDB.cpp  TiDB.h  TiKVRecordFormat.h  Types.h
dbms/src/TestUtils/: ExecutorTestUtils.cpp  ExecutorTestUtils.h  TiFlashTestEnv.cpp
dbms/src/TiDB/Schema/: SchemaBuilder.cpp
docs/design/: 2026-01-14-tiforth-milestone-1-skeleton.md  2026-01-14-tiforth-milestone-10-expression-compilation.md  2026-01-14-tiforth-milestone-11-pipeline-breaker-hash-aggregation.md  2026-01-14-tiforth-milestone-12-full-aggregation.md  2026-01-14-tiforth-milestone-13-task-blocking-io.md  2026-01-14-tiforth-milestone-14-arrow-compute-aggregation.md  2026-01-14-tiforth-milestone-15-arrow-hash-agg-operator.md  2026-01-14-tiforth-milestone-16-arrow-hash-agg-parity-gtests.md  2026-01-14-tiforth-milestone-17-default-arrow-hash-agg.md  2026-01-14-tiforth-milestone-18-small-string-single-key-grouper.md  2026-01-14-tiforth-milestone-19-small-string-hash-agg-benchmarks.md  2026-01-14-tiforth-milestone-2-recordbatch-plumbing.md  2026-01-14-tiforth-milestone-20-remove-legacy-hash-agg-rename-hash-agg.md  2026-01-14-tiforth-milestone-21-collation-aware-group-by-grouper.md  2026-01-14-tiforth-milestone-22-taskgroup-pipelinetask-model.md  2026-01-14-tiforth-milestone-23-ara-rewrite-logical-physical-pipeline.md  2026-01-14-tiforth-milestone-24-deprecate-legacy-agg-ops-to-ara-pipeline.md  2026-01-14-tiforth-milestone-25-ara-style-operator-rewrite.md  2026-01-14-tiforth-milestone-26-public-api-logical-pipeline-task-groups-only.md  2026-01-14-tiforth-milestone-3-pipeline-framework.md  2026-01-14-tiforth-milestone-3-projection-scalar-functions.md  2026-01-14-tiforth-milestone-4-filter-expression-evaluation.md  2026-01-14-tiforth-milestone-5-hash-aggregation-agg-framework.md  2026-01-14-tiforth-milestone-5-hash-aggregation-hash-table.md  2026-01-14-tiforth-milestone-5-hash-aggregation.md  2026-01-14-tiforth-milestone-6-join-sort.md  2026-01-14-tiforth-milestone-7-memory-pool-spill-abi.md  2026-01-14-tiforth-milestone-8-type-mapping.md  2026-01-14-tiforth-milestone-9-host-integration.md  2026-01-14-tiforth.md  2026-01-19-arrow-compute-agg-benchmark-report.md  2026-01-19-arrow-compute-agg-string-key-profiling.md
libs/: CMakeLists.txt
